--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -38,10 +38,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   flutter_secure_storage: ^6.0.0
+  provider: ^6.0.3
+  json_annotation: ^4.6.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.3.1
+  build_runner: ^2.2.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -64,6 +68,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/google_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
